--- a/less/_mixin-flexbox.less
+++ b/less/_mixin-flexbox.less
@@ -93,6 +93,8 @@
 //fxjc center top
 .fx-ct{
     .mix_fx-flex;
+    .mix_fx-align-items(flex-start);
+    -ms-flex-align: start;
     .mix_fx-justify-content(center);
     -ms-flex-pack: center;
 }
@@ -113,6 +115,8 @@
 //fxje right top
 .fx-rt{
     .mix_fx-flex;
+    .mix_fx-align-items(flex-start);
+    -ms-flex-align: start;
     .mix_fx-justify-content(flex-end);
     -ms-flex-pack:end;
 }
